added meta information, seo, keywoards and social share image

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <meta name="description" content="Shadowing CSS provides a collection of beautiful CSS box shadows. Preview and copy code for pre-made shadows, or create your own unique shadow designs.">
+  <meta name="keywords" content="CSS, Box Shadow, CSS Shadows, Shadowing CSS, CSS Design, CSS Effects, CSS Box Shadow, CSS Box Shadows, CSS Shadow, CSS Shadow Generator, CSS Shadow Maker, CSS Shadow Preview, CSS Shadow Code, CSS Shadow Copy, CSS Shadow Copy Code, CSS Shadow Copy Paste, CSS Shadow Paste">
+  <meta name="author" content="Ayoub el Abbous">
+  <meta name="robots" content="index, follow">
+  <link rel="icon" href="/favicon.ico">
+  <title>Shadowing CSS - Beautiful CSS Shadows in No Time!</title>
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://shadowing.iyoub.com/">
+  <meta property="og:title" content="Shadowing CSS - Beautiful CSS Shadows in No Time!">
+  <meta property="og:description" content="Shadowing CSS provides a collection of beautiful CSS box shadows. Preview and copy code for pre-made shadows, or create your own unique shadow designs.">
+  <meta property="og:image" content="https://shadowing.iyoub.com/ssi.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://shadowing.iyoub.com/">
+  <meta property="twitter:title" content="Shadowing CSS - Beautiful CSS Shadows in No Time!">
+  <meta property="twitter:description" content="Shadowing CSS provides a collection of beautiful CSS box shadows. Preview and copy code for pre-made shadows, or create your own unique shadow designs.">
+  <meta property="twitter:image" content="https://shadowing.iyoub.com/ssi.jpg">
 </head>
 
 <body>
